2014-10-14  Alejandro G. Castro  <alex@igalia.com>

        Changes in the stretchy attribute do not update rendering
        https://bugs.webkit.org/show_bug.cgi?id=136883

        Reviewed by Darin Adler.

        The test updates the stretchy value in a timeout.

        * mathml/presentation/mo-stretch-update-expected.html: Added.
        * mathml/presentation/mo-stretch-update.html: Added.

2014-10-14  Andrzej Badowski  <a.badowski@samsung.com>

        [AX] Improve AccessibilityTableCell columnHeaders and rowHeaders functions.
        https://bugs.webkit.org/show_bug.cgi?id=136818

        Reviewed by Chris Fleizach.

        * accessibility/table-headers-expected.txt: Added.
        * accessibility/table-headers.html: Added.
        * platform/mac/accessibility/table-attributes-expected.txt:
        * platform/mac/accessibility/table-cells-expected.txt:
        * platform/mac/accessibility/table-sections-expected.txt:

2014-10-13  Benjamin Poulain  <bpoulain@apple.com>

        Add test coverage for the more complex cases of :not()
        https://bugs.webkit.org/show_bug.cgi?id=137671

        Reviewed by Andreas Kling.

        Those tests cover the future CSS JIT support of :not(). I'll to the implementation
        split over multiple patch, better put the tests first.

        * fast/selectors/not-backtracking-expected.txt: Added.
        * fast/selectors/not-backtracking.html: Added.
        * fast/selectors/not-boundaries-expected.txt: Added.
        * fast/selectors/not-boundaries.html: Added.

2014-10-13  Yusuke Suzuki  <utatane.tea@gmail.com>

        CSS JIT: Implement :visited pseudo class
        https://bugs.webkit.org/show_bug.cgi?id=135293

        Reviewed by Benjamin Poulain.

        To cover the :-webkit-any(:not(:link)), added new tests.

        * TestExpectations:
        * fast/history/link-inside-not-expected.txt:
        * fast/history/link-inside-not-inside-any-expected.txt: Added.