@@ -1,0 +1,32 @@
+<!DOCTYPE html>
+<html>
+<body>
+    <p>This test checks the strechy value of the mo tag is case sensitive.</p>
+    <p>Setting stretchy to True and to false for the integral symbol should give the same result:</p>
+    <math>
+        <mrow>
+            <mo stretchy="True">&Integral;</mo>
+            <mspace height="75px" depth="1px"/>
+        </mrow>
+    </math>
+    <math>
+        <mrow>
+            <mo stretchy="false">&Integral;</mo>
+            <mspace height="75px" depth="1px"/>
+        </mrow>
+    </math>
+    <p>Setting stretchy to False and to true for the left ceiling symbol should give the same result:</p>
+    <math>
+        <mrow>
+            <mo stretchy="False">&LeftCeiling;</mo>
+            <mspace height="75px" depth="1px"/>
+        </mrow>
+    </math>
+    <math>
+        <mrow>
+            <mo stretchy="true">&LeftCeiling;</mo>
+            <mspace height="75px" depth="1px"/>
+        </mrow>
+    </math>
+</body>
+</html>
