@@ -1,5 +1,15 @@
 2014-10-14  Alejandro G. Castro  <alex@igalia.com>
 
+        Add test to check stretchy value is case sensitive
+        https://bugs.webkit.org/show_bug.cgi?id=137602
+
+        Reviewed by Darin Adler.
+
+        * mathml/presentation/mo-stretchy-case-sensitive-expected.html: Added.
+        * mathml/presentation/mo-stretchy-case-sensitive.html: Added.
+
+2014-10-14  Alejandro G. Castro  <alex@igalia.com>
+
         Changes in the stretchy attribute do not update rendering
         https://bugs.webkit.org/show_bug.cgi?id=136883
 
